--- a/IHM/TD2/css/style.css
+++ b/IHM/TD2/css/style.css
@@ -42,3 +42,28 @@ h5{
     background-color: #FEFFFB;
     margin: 3px;
 }
+#UyInfo{
+    background-color: aqua;
+}
+#UyenInfo{
+    background-color: pink;
+}
+#KhangInfo{
+    background-color: green;
+}
+#KhoaInfo{
+    background-color: yellow;
+}
+.media {
+    padding: 0;
+    margin-top: 50px;
+}
+
+.Info {
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: wheat;
+    padding: 0;
+    list-style: none;
+    margin: 0;
+}
