--- a/IHM/TD2/css/style.css
+++ b/IHM/TD2/css/style.css
@@ -1,28 +1,29 @@
 body{
     background-color: #E9EDDF;
+
 }
 nav{
     margin: 1px;
 }
 
 .bienvenue{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Acme', sans-serif;
 }
 
 h5{
     color: #252618;
     font-weight: bold;
     font-size: xx-large;
+    font-family: 'Acme', sans-serif
 } 
 
 #footer{
-
     text-align: right;
     bottom: 0;
 }
 
 #footer p {
-    color:#0F272E;
+    color:#252618;
 }
 
 .jumbotron{
@@ -44,6 +45,7 @@ h5{
 }
 #UyInfo{
     background-color: aqua;
+    width: 500px;
 }
 #UyenInfo{
     background-color: pink;
@@ -61,9 +63,27 @@ h5{
 
 .Info {
     font-size: 20px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: wheat;
+    font-family: 'Acme', sans-serif;
     padding: 0;
     list-style: none;
     margin: 0;
 }
+.card-title {
+    font-family: 'Acme', sans-serif;
+}
+.card-body {
+    font-family: 'Acme', sans-serif;
+}
+
+.lead {
+    font-size: 40px;
+    font-family: 'Acme', sans-serif;
+}
+.jumbotron > .card-title {
+    font-size: 60px;
+    font-family: 'Acme', sans-serif;
+}
+
+.card > .card-header {
+    font-family: 'Acme', sans-serif;
+} 
