--- a/IHM/KDMUSIQUE/css/album.css
+++ b/IHM/KDMUSIQUE/css/album.css
@@ -54,15 +54,18 @@
 #body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #E5E5E5;
-    height: 1900px;
+    height: 2000px;
+    width: 60%;
+
 }
 .row .col{
-    width: 200px;   
+    width: 140px;
+    text-align: center;
 }
 .album img{
     margin-top: 30px;
-    width: 198px;
-    margin: 0 auto;
+    width: 152px;
+    height: 180px;
 }
 .nomDeAlbum{
     text-align: center;
@@ -76,15 +79,17 @@
     margin-top: 1%;
 }
 #KPop{
-    margin-top: 1%;
+    margin-top: 10%;
 }
 #US-UK{
-    margin-top: 1%;
+    margin-top: 10%;
 }
 .row h1{
     font-size: 35px;
     margin-left: 2%;
     padding-top: 1%;
+    font-stretch: ultra-expanded;
+    font-weight: bold;
 }
 .album a{
     text-decoration: none;
