--- a/IHM/KDMUSIQUE/css/test.css
+++ b/IHM/KDMUSIQUE/css/test.css
@@ -104,6 +104,11 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.playlist a:hover {
+    text-decoration: none;
+    color: black;
+}
+
 .playlist:hover {
     background-color: #C4C4C4;
 }
@@ -144,10 +149,42 @@ body {
 }
 
 #like {
+    margin-top: 10px;
     width: 20px;
     height: 20px;
+    cursor: pointer;
 }
-#progress {
 
+.playBar {
+    margin-top: 80px;
 }
+
+.playBar img {
+    width: 40px;
+}
+
+.playBar progress {
+    width: 200px;
+    margin-left: 15px;
+}
+
+.wrapLyrics {
+    background-color: #fff;
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 20px;
+}
+
+#lyrics {
+    font-size: 14px;
+}
+.artist {
+    font-weight: bolder;
+}
+
+.wrapLyrics label {
+    font-weight: bolder;
+    font-size: 24px;
+}
+
 /* end of playzone and lyrics */
