--- a/IHM/KDMUSIQUE/css/test.css
+++ b/IHM/KDMUSIQUE/css/test.css
@@ -57,16 +57,19 @@ body {
 
 /* menu bar on the left */
 .mainBody {
-    height: calc(100vh - 70px);
     background-color: #E5E5E5;
     margin-top: -10px;
+    display: grid;
+    grid-template-columns: 250px  auto 350px;
+    /* grid-template-areas: 
+    'menu menu menu menu main main main main main main main right'; */
 }
 
 .categories {
-    width: 200px;
+    width: 250px;
     height: 100%;
     background-color: #fff;
-    float: left;
+    /* grid-area: menu; */
 }
 
 .categoriesSection {
@@ -99,7 +102,7 @@ body {
 .playlist {
     width: 100%;
     display: flex;  
-    padding: 20px 10px;
+    padding: 20px 40px;
     cursor: pointer;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -116,14 +119,15 @@ body {
 
 /* content */
 .content {
-   float: left;
+    /* grid-area: main; */
+ 
 }
 /* end of content */
 
 /* playzone and lyrics */
 .playZone {
-    margin-left: 1600px;
-    
+    /* grid-area: right; */
+    width: 350px;
 }
 
 .wrap {
