--- a/IHM/KDMUSIQUE/css/test.css
+++ b/IHM/KDMUSIQUE/css/test.css
@@ -106,7 +106,11 @@ body {
     cursor: pointer;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
+a > span.playlist:hover {
+    text-transform: none;
+    color: black;
+    text-decoration: none;
+}
 .playlist a:hover {
     text-decoration: none;
     color: black;
