--- a/IHM/KDMUSIQUE/css/test.css
+++ b/IHM/KDMUSIQUE/css/test.css
@@ -80,7 +80,7 @@ body {
 .category {
     width: 100%;
     display: flex;  
-    padding: 20px 0px;
+    padding: 20px 20px;
     cursor: pointer;
 }
 
@@ -88,8 +88,7 @@ body {
     background-color: #C4C4C4;
 }
 
-.categories a {
-    margin-left: 35px;
+.categoriesSelection a {
     font-weight: bolder;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -106,15 +105,7 @@ body {
     cursor: pointer;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-a > span.playlist:hover {
-    text-transform: none;
-    color: black;
-    text-decoration: none;
-}
-.playlist a:hover {
-    text-decoration: none;
-    color: black;
-}
+
 
 .playlist:hover {
     background-color: #C4C4C4;
