--- a/IHM/KDMUSIQUE/css/search.css
+++ b/IHM/KDMUSIQUE/css/search.css
@@ -118,7 +118,6 @@
 .popup {
     position: relative;
     display: inline-block;
-    cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -130,13 +129,31 @@
     height: 500px;
     background-color: #E5E5E5;
     color: black;
-    text-align: center;
-    border-radius: 6px;
-    padding: 250px 0;
+    text-align: left;
+    padding: 100px 0;
+    padding-left: 50px;
     position: absolute;
     z-index: 1;
     margin-left: 100px;
+    font-size: 30px;
 }
 .popup .show {
     visibility: visible;
+}
+.speech{
+    text-align: center;
+    padding-top: 20px;
+    border: 1px solid red;
+    background-color: white;
+    height: 100px;
+    border-radius: 50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius: 50%;
+    width: 100px;
+    margin: 0 260px;
+    margin-top: 30px;
+}
+.speech:hover{
+    background-color: red;
+    cursor: pointer;
 }
