--- a/IHM/KDMUSIQUE/css/accueil.css
+++ b/IHM/KDMUSIQUE/css/accueil.css
@@ -61,9 +61,8 @@
 
 }
 .album img{
-    margin-top: 30px;
-    width: 152px;
-    height: 180px;
+    margin: 30px 0px;
+    width: 150px;
 }
 .nomDeAlbum{
     text-align: center;
@@ -123,12 +122,26 @@
 .txttheme{
     color:#fff; 
     font-weight: bold; 
-    font-size: x-large;
+    font-size: 20px;
 }
 
 .carousel-control-prev, .carousel-control-next {
     margin: auto -70px;
     background-color: #666666;
-    
+    width: 50px;
     height: 50px;
+}
+
+.wrap-carousel {
+    width: 700px;
+    margin: 0 auto;
+}
+
+.theme img {
+    width: 150px;
+}
+
+.col-3 a {
+    display: block;
+    padding-bottom: 15px;
 }
