--- a/IHM/KDMUSIQUE/css/theme.css
+++ b/IHM/KDMUSIQUE/css/theme.css
@@ -50,10 +50,13 @@
 }
 /*END HEADER AND FOOTER*/
 /*BODY*/
+.categoriesSelection a:hover {
+    text-decoration: none;
+    color: black;
+}
 #content{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #E5E5E5;
-    width: 60%;
 }
 .album img{
     margin-top: 30px;
@@ -69,6 +72,10 @@
     color: #ff577F;
 }
 
+#wrap-carousel {
+    width: 800px;
+    margin: 0 auto;
+}
 #row0{
     font-size: 35px;
     margin-left: 2%;
@@ -89,15 +96,10 @@
 .album a:hover .chanteur{
     font-weight: bold;
 }
-#btnnext{
-    margin-left: 100%;
-    background-color: gray;
-    padding:10%;
-}
-#btnprev{
-    margin-right: 100%;
-    background-color: gray;
-    padding:10%;
+.carousel-control-prev, .carousel-control-next {
+    height: 50px;
+    background-color: #666666;
+    margin: auto -60px;
 }
 .theme a{
     text-decoration: none;
@@ -106,11 +108,16 @@
     text-decoration: none;
 }
 .theme img{
-    width: 210px;
+    width: 180px;
     border-radius:8px;
 }
 .txttheme{
     color:#fff; 
     font-weight: bold; 
     font-size: x-large;
+}
+
+#carouselExampleControls4 {
+    width: 800px;
+    margin:  0 auto;
 }
