--- a/IHM/KDMUSIQUE/css/album.css
+++ b/IHM/KDMUSIQUE/css/album.css
@@ -51,6 +51,10 @@
 }
 /*END HEADER AND FOOTER*/
 /*BODY*/
+.categoriesSelection a:hover {
+    text-decoration: none;
+    color: black;
+}
 #album {
     background-color: #c4c4c4;
 }
