--- a/IHM/KDMUSIQUE/css/playlist.css
+++ b/IHM/KDMUSIQUE/css/playlist.css
@@ -3,6 +3,11 @@
     background-color: #c4c4c4;
 }
 
+.categoriesSelection a:hover {
+    text-decoration: none;
+    color: black;
+}
+
 .wrap-vos-playlists label {
     font-weight: bolder;
     font-size: 25px;
