--- a/IHM/KDMUSIQUE/css/playlist1.css
+++ b/IHM/KDMUSIQUE/css/playlist1.css
@@ -7,6 +7,15 @@
 }
 
 /* playlist */
+.categoriesSelection a:hover {
+    text-decoration: none;
+    color: black;
+}
+
+#p1 {
+    background-color: #c4c4c4;
+}
+
 .wrap-playlist1 label {
     font-weight: bolder;
     font-size: 25px;
