--- a/IHM/KDMUSIQUE/css/test.css
+++ b/IHM/KDMUSIQUE/css/test.css
@@ -106,7 +106,10 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-
+.categoriesSelection a:hover {
+    text-decoration: none;
+    color: black;
+}
 .playlist:hover {
     background-color: #C4C4C4;
 }
