--- a/IHM/KDMUSIQUE/css/album.css
+++ b/IHM/KDMUSIQUE/css/album.css
@@ -69,7 +69,7 @@
 .album img{
     margin-top: 30px;
     width: 152px;
-    height: 180px;
+    height: 152px;
 }
 .nomDeAlbum{
     text-align: center;
@@ -206,3 +206,21 @@
         border-top-left-radius: 50% 1%;
    }
 }
+
+/* stack paper effect */
+.album img {
+    background: #fff;
+    box-shadow:
+      /* The top layer shadow */
+      0 -1px 1px rgba(0,0,0,0.15),
+      /* The second layer */
+      0 -10px 0 -5px #eee,
+      /* The second layer shadow */
+      0 -10px 1px -4px rgba(0,0,0,0.15),
+       /* The third layer */
+      0 -20px 0 -10px #eee,
+      /* The third layer shadow */
+      0 -20px 1px -9px rgba(0,0,0,0.15);
+      /* Padding for demo purposes */
+      padding: 5px;
+  }
